--- a/WhereYouAt/Base.lproj/Main.storyboard
+++ b/WhereYouAt/Base.lproj/Main.storyboard
@@ -79,6 +79,7 @@
                             <constraint firstAttribute="centerX" secondItem="jrt-5e-7WN" secondAttribute="centerX" id="MlB-s6-K8O"/>
                             <constraint firstAttribute="centerX" secondItem="iZz-11-NAa" secondAttribute="centerX" id="SaL-Yj-sbu"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="VDN-21-rqh" secondAttribute="bottom" constant="60" id="SpY-NY-aAp"/>
+                            <constraint firstItem="pWX-XY-zwe" firstAttribute="top" secondItem="iZz-11-NAa" secondAttribute="bottom" constant="8" id="VLR-EA-NQ0"/>
                             <constraint firstAttribute="centerX" secondItem="VDN-21-rqh" secondAttribute="centerX" id="XVB-jw-8eM"/>
                             <constraint firstAttribute="trailing" secondItem="pWX-XY-zwe" secondAttribute="trailing" constant="40" id="avR-qD-QRy"/>
                             <constraint firstAttribute="trailing" secondItem="iZz-11-NAa" secondAttribute="trailing" constant="40" id="chc-5G-PUv"/>
@@ -111,27 +112,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wig-mo-cUL">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wig-mo-cUL">
                                 <rect key="frame" x="16" y="285" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Firstname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ceo-u9-cdV">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Firstname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ceo-u9-cdV">
                                 <rect key="frame" x="16" y="334" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Lastname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gzU-gz-3U4">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Lastname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gzU-gz-3U4">
                                 <rect key="frame" x="16" y="386" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KRP-pa-tgY">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KRP-pa-tgY">
                                 <rect key="frame" x="16" y="424" width="568" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmV-8g-O1U">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmV-8g-O1U">
                                 <rect key="frame" x="276" y="462" width="49" height="30"/>
                                 <state key="normal" title="Signup">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -142,6 +143,26 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OmV-8g-O1U" firstAttribute="top" secondItem="KRP-pa-tgY" secondAttribute="bottom" constant="20" id="0Au-kJ-efF"/>
+                            <constraint firstAttribute="centerY" secondItem="gzU-gz-3U4" secondAttribute="centerY" id="22B-fe-QFz"/>
+                            <constraint firstAttribute="trailing" secondItem="gzU-gz-3U4" secondAttribute="trailing" constant="40" id="2Nl-m6-ThX"/>
+                            <constraint firstItem="wig-mo-cUL" firstAttribute="leading" secondItem="dnW-Qs-ZKh" secondAttribute="leading" constant="40" id="C4A-Pq-0GP"/>
+                            <constraint firstAttribute="trailing" secondItem="ceo-u9-cdV" secondAttribute="trailing" constant="40" id="Gn7-dr-6uO"/>
+                            <constraint firstAttribute="centerX" secondItem="wig-mo-cUL" secondAttribute="centerX" id="O8k-Mg-Uzz"/>
+                            <constraint firstAttribute="centerX" secondItem="gzU-gz-3U4" secondAttribute="centerX" id="QfQ-Bo-deK"/>
+                            <constraint firstItem="ceo-u9-cdV" firstAttribute="leading" secondItem="dnW-Qs-ZKh" secondAttribute="leading" constant="40" id="Swd-R0-GgS"/>
+                            <constraint firstItem="KRP-pa-tgY" firstAttribute="top" secondItem="gzU-gz-3U4" secondAttribute="bottom" constant="8" id="Uoj-nM-nY7"/>
+                            <constraint firstAttribute="trailing" secondItem="KRP-pa-tgY" secondAttribute="trailing" constant="40" id="XAq-FN-Lxf"/>
+                            <constraint firstAttribute="centerX" secondItem="KRP-pa-tgY" secondAttribute="centerX" id="dbx-e5-Xhr"/>
+                            <constraint firstAttribute="centerX" secondItem="ceo-u9-cdV" secondAttribute="centerX" id="eGL-24-NeY"/>
+                            <constraint firstAttribute="trailing" secondItem="wig-mo-cUL" secondAttribute="trailing" constant="40" id="euf-of-5hc"/>
+                            <constraint firstItem="KRP-pa-tgY" firstAttribute="leading" secondItem="dnW-Qs-ZKh" secondAttribute="leading" constant="40" id="hAA-If-2nG"/>
+                            <constraint firstAttribute="centerX" secondItem="OmV-8g-O1U" secondAttribute="centerX" id="hzf-R5-FHY"/>
+                            <constraint firstItem="gzU-gz-3U4" firstAttribute="top" secondItem="ceo-u9-cdV" secondAttribute="bottom" constant="8" id="jva-ca-en0"/>
+                            <constraint firstItem="gzU-gz-3U4" firstAttribute="leading" secondItem="dnW-Qs-ZKh" secondAttribute="leading" constant="40" id="nXl-xb-nC8"/>
+                            <constraint firstItem="ceo-u9-cdV" firstAttribute="top" secondItem="wig-mo-cUL" secondAttribute="bottom" constant="8" id="od9-uh-ryj"/>
+                        </constraints>
                     </view>
                     <toolbarItems>
                         <barButtonItem title="Item" id="dog-ah-2xu"/>
@@ -328,6 +349,10 @@
                                                 </textView>
                                                 <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lWJ-mR-cXi">
                                                     <rect key="frame" x="140" y="-4" width="80" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="2fi-ds-y7T"/>
+                                                        <constraint firstAttribute="width" constant="80" id="9QP-BX-WVb"/>
+                                                    </constraints>
                                                     <state key="normal" title="My location">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -336,9 +361,9 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="l2F-0v-LXv" secondAttribute="bottom" constant="5" id="H2c-Pg-G7a"/>
                                                 <constraint firstItem="l2F-0v-LXv" firstAttribute="top" secondItem="67q-a9-mW1" secondAttribute="top" constant="5" id="KhJ-vY-DJk"/>
-                                                <constraint firstItem="l2F-0v-LXv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lWJ-mR-cXi" secondAttribute="trailing" constant="42" id="NJ1-FD-FP5"/>
+                                                <constraint firstItem="l2F-0v-LXv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lWJ-mR-cXi" secondAttribute="trailing" constant="22" id="NJ1-FD-FP5"/>
                                                 <constraint firstAttribute="bottom" secondItem="lWJ-mR-cXi" secondAttribute="bottom" constant="5" id="cjW-n8-jkh"/>
-                                                <constraint firstItem="lWJ-mR-cXi" firstAttribute="leading" secondItem="67q-a9-mW1" secondAttribute="leading" constant="100" id="fu2-Xu-hqH"/>
+                                                <constraint firstItem="lWJ-mR-cXi" firstAttribute="leading" secondItem="67q-a9-mW1" secondAttribute="leading" constant="20" id="fu2-Xu-hqH"/>
                                                 <constraint firstAttribute="trailing" secondItem="l2F-0v-LXv" secondAttribute="trailing" constant="5" id="njb-K0-pDf"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -353,13 +378,17 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lra-pq-DOK" id="Jtj-kM-Lsx">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGy-0V-nbg">
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGy-0V-nbg">
                                                     <rect key="frame" x="380" y="-3" width="80" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="9Eo-06-hXA"/>
+                                                        <constraint firstAttribute="height" constant="30" id="WgJ-L7-tV6"/>
+                                                    </constraints>
                                                     <state key="normal" title="My location">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                 </button>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uea-qt-MXp">
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uea-qt-MXp">
                                                     <rect key="frame" x="8" y="4" width="323" height="21"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -369,8 +398,8 @@
                                             <constraints>
                                                 <constraint firstItem="uea-qt-MXp" firstAttribute="leading" secondItem="Jtj-kM-Lsx" secondAttribute="leading" constant="5" id="FRF-Wt-v0T"/>
                                                 <constraint firstAttribute="bottom" secondItem="vGy-0V-nbg" secondAttribute="bottom" constant="5" id="Ggr-rT-Rfe"/>
-                                                <constraint firstAttribute="trailing" secondItem="vGy-0V-nbg" secondAttribute="trailing" constant="100" id="c2e-pW-8rb"/>
-                                                <constraint firstItem="vGy-0V-nbg" firstAttribute="leading" secondItem="uea-qt-MXp" secondAttribute="trailing" constant="20" id="c3c-gn-DGL"/>
+                                                <constraint firstAttribute="trailing" secondItem="vGy-0V-nbg" secondAttribute="trailing" constant="20" id="c2e-pW-8rb"/>
+                                                <constraint firstItem="vGy-0V-nbg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uea-qt-MXp" secondAttribute="trailing" constant="22" id="c3c-gn-DGL"/>
                                                 <constraint firstAttribute="centerY" secondItem="vGy-0V-nbg" secondAttribute="centerY" id="gL0-Kc-hyY"/>
                                                 <constraint firstItem="uea-qt-MXp" firstAttribute="top" secondItem="Jtj-kM-Lsx" secondAttribute="top" constant="5" id="p5j-1p-AIK"/>
                                                 <constraint firstAttribute="bottom" secondItem="uea-qt-MXp" secondAttribute="bottom" constant="5" id="vbB-Ra-fQG"/>
@@ -445,6 +474,6 @@
         <image name="New.png" width="78" height="78"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="sC3-5n-TYg"/>
+        <segue reference="0hX-oe-vaY"/>
     </inferredMetricsTieBreakers>
 </document>
